# advent-of-code

./: .gitignore  1.ts  2.ts  3-1.ts  3-2.ts  4.ts  5-1.ts  5-2.ts  6.ts  7-1.ts  7-2.ts  7.ts  8.ts  README.md  bun.lockb  package.json  tsconfig.json
2023/: 1.ts  10-1.ts  10-2.ts  11-1.ts  11-2.ts  12.ts  13-1.ts  13-2.ts  14.ts  15.ts  16.ts  17.ts  18.ts  19-1.ts  19-2.ts  2.ts  20-1.ts  21-1.ts  21-2.ts  21.ts  22.ts  23.ts  24-1.ts  24-2.ts  25.ts  3-1.ts  3-2.ts  4.ts  5-1.ts  5-2.ts  6.ts  7-1.ts  7-2.ts  8.ts  9.ts  bun.lockb  package.json  tsconfig.json
2024/: .env.example  .function  .tool-versions  pyproject.toml
2024/1/: main.py  puzzle.md
2024/10/: main.py  puzzle.md
2024/11/: main.py  puzzle.md
2024/12/: main.py  puzzle.md
2024/13/: main.py  puzzle.md
2024/14/: main.py  puzzle.md
2024/15/: main.py  puzzle.md
2024/16/: main.py  puzzle.md
2024/18/: main.py  puzzle.md
2024/19/: main.py  puzzle.md
2024/2/: main.py  puzzle.md
2024/20/: main.py  puzzle.md
2024/21/: main.py  puzzle.md
2024/22/: main.py  puzzle.md
2024/23/: main.py  puzzle.md
2024/25/: main.py  puzzle.md
2024/3/: main.py  test.txt
2024/4/: main.py  puzzle.md
2024/5/: main.py  puzzle.md
2024/6/: main.py  puzzle.md
2024/7/: main.py  puzzle.md
2024/8/: main.py  puzzle.md
2024/9/: main.py  puzzle.md
2025/: .env.example  pyproject.toml
2025/1/: main.py  puzzle.md  test.py
2025/10/: main.py  puzzle.md
2025/11/: main.py  puzzle.md
2025/2/: main.py  puzzle.md
2025/3/: main.py  puzzle.md
2025/4/: main.py
2025/5/: main.py  puzzle.md
(+7 files in other folders)
