[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Kelli Rockwell <kellirockwell@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
